--- a/src/main/webapp/estilos/estilos.css
+++ b/src/main/webapp/estilos/estilos.css
@@ -27,3 +27,14 @@
 .ui-dialog {
     z-index: 10000 !important;
 }
+
+.header-container {
+    display: flex;
+    justify-content: space-between; /* Afasta os elementos para os lados opostos */
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.ui-selectonemenu-panel.selectOneMenuCustom-panel {
+    z-index: 10050 !important; /* Garanta que seja maior que o z-index do diálogo */
+}
