--- a/src/main/webapp/estilos/estilos.css
+++ b/src/main/webapp/estilos/estilos.css
@@ -36,6 +36,14 @@
     margin-top: 10px;
 }
 
+.header-container-dialog {
+    display: flex;
+    justify-content: flex-end; /* Afasta os elementos para os lados opostos */
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
 .ui-selectonemenu-panel, .ui-datepicker {
     z-index: 10000 !important;
 }
