fix: ajuste de gitignore para remover pasta idea e alteração de estilo para datatable de pessoas e ajuste no readme.md

--- a/src/main/webapp/estilos/estilos.css
+++ b/src/main/webapp/estilos/estilos.css
@@ -15,7 +15,8 @@
 
 .div-table-pessoas {
     overflow-x: auto;
-    height: 90vh;
+    height: 89vh;
+    max-height: 90%;
     width: auto;
     max-width: 100%;
 }
